--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Landing page</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="">
+                <img src="img/menu.png" alt="icono menu">
+            </a>
+            <button>Contacta</button>
+        </nav>
+    </header>
 </body>
 </html>
