--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    
     <title>Landing page</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="">
+            <a class="nav__enlace" href="#">
                 <img src="img/menu.png" alt="icono menu">
             </a>
             <button>Contacta</button>
