Se crea el main de la landing page

--- a/index.html
+++ b/index.html
@@ -16,5 +16,21 @@
             <button>Contacta</button>
         </nav>
     </header>
+    <main>
+        <section class="main__s1">
+            <h1>Protege tu vida y la de tu motor</h1>
+            <p>Estas a punto de suscribirte al mejor servicio de mantenimiento de motocicletas.</p>
+            <div>
+                <input type="text" name="correo" id="">
+                <button>Registrarme</button>
+            </div>
+        </section>
+        <section class="main__s2">
+            <img src="img/Dominar-400.jpg" alt="moto">
+        </section>
+        <section>
+
+        </section>
+    </main>
 </body>
 </html>
