se crean las reseñas

--- a/index.html
+++ b/index.html
@@ -32,5 +32,16 @@
 
         </section>
     </main>
+    <footer>
+        <section>
+            <div>
+                <img src="img/reseña.jpg" alt="reseña">
+            </div>
+            <div>
+                <h3>Todos nuestros clientes satisfechos</h3>
+                <p><span>★</span> 4.7   1,000,000 de reseñas</p>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
