Se modifica el texto de la calificacion de reseñas

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div>
                 <h3>Todos nuestros clientes satisfechos</h3>
-                <p><span class="star">★</span> 4.7   1,000,000 de reseñas</p>
+                <p><span class="star">★</span><span class="number">4.7</span>1,000,000 de reseñas</p>
             </div>
         </section>
     </footer>
