Se agregan etiquetas meta opengraph

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta property="og:title" content="Servicio de mantenimiento de motocicletas">
+    <meta property="og:description" content="Suscríbete al mejor servicio de mantenimiento de motocicletas y protege tu vida y la de tu motor.">
+    <meta property="og:image" content="img/Dominar-400.jpg">
     <title>Landing page</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
