Se agregan metaetiquetas robots y keywords

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta property="og:title" content="Servicio de mantenimiento de motocicletas">
     <meta property="og:description" content="Suscríbete al mejor servicio de mantenimiento de motocicletas y protege tu vida y la de tu motor.">
     <meta property="og:image" content="img/Dominar-400.jpg">
+    <meta name="robots" content="index, nofollow">
+    <meta name="keywords" content="mantenimiento, motocicletas, suscripción, servicio, motor, protección">
     <title>Landing page</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a class="nav__enlace" href="#">
+            <a class="nav__enlace" href="#" rel="noopener nofollow">
                 <img src="img/menu.png" alt="icono menu">
             </a>
             <button>Contacta</button>
@@ -28,7 +30,7 @@
             </div>
         </section>
         <section class="main__s2">
-            <img src="img/Dominar-400.jpg" alt="moto">
+            <img src="img/Dominar-400.jpg" alt="Dominar400">
         </section>
         <section>
 
@@ -37,7 +39,7 @@
     <footer>
         <section>
             <div>
-                <img src="img/reseña.jpg" alt="reseña">
+                <img src="img/reseña.jpg" alt="reseña de servicio de mantenimiento">
             </div>
             <div>
                 <h3>Todos nuestros clientes satisfechos</h3>
