Se modifica metaetiqueta robots y titulo

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta property="og:title" content="Servicio de mantenimiento de motocicletas">
     <meta property="og:description" content="Suscríbete al mejor servicio de mantenimiento de motocicletas y protege tu vida y la de tu motor.">
     <meta property="og:image" content="img/Dominar-400.jpg">
-    <meta name="robots" content="index, nofollow">
+    <meta name="robots" content="index, nofollow, noarchive">
     <meta name="keywords" content="mantenimiento, motocicletas, suscripción, servicio, motor, protección">
-    <title>Landing page</title>
+    <title>Diagnóstico y Mantenimiento de motocicletas</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
