Se actualiza el codigo con algunas mejoras para optimizacion SEO

--- a/index.html
+++ b/index.html
@@ -1,51 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Servicio de mantenimiento de motocicletas">
-    <meta property="og:description" content="Suscríbete al mejor servicio de mantenimiento de motocicletas y protege tu vida y la de tu motor.">
-    <meta property="og:image" content="img/Dominar-400.jpg">
-    <meta name="robots" content="index, nofollow, noarchive">
-    <meta name="keywords" content="mantenimiento, motocicletas, suscripción, servicio, motor, protección">
-    <title>Diagnóstico y Mantenimiento de motocicletas</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <a class="nav__enlace" href="#" rel="noopener nofollow">
-                <img src="img/menu.png" alt="icono menu">
-            </a>
-            <button>Contacta</button>
-        </nav>
-    </header>
-    <main>
-        <section class="main__s1">
-            <h1>Protege tu vida y la de tu motor</h1>
-            <p>Estas a punto de suscribirte al mejor servicio de mantenimiento de motocicletas.</p>
-            <div>
-                <input type="text" name="correo" id="">
-                <button>Registrarme</button>
-            </div>
-        </section>
-        <section class="main__s2">
-            <img src="img/Dominar-400.jpg" alt="Dominar400">
-        </section>
-        <section>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Suscríbete al mejor servicio de mantenimiento de motocicletas. Protege tu vida y alarga la vida útil de tu motor con nuestros diagnósticos y revisiones especializadas.">
+  <meta name="robots" content="index, nofollow, noarchive">
+  <meta name="keywords" content="mantenimiento, motocicletas, suscripción, servicio, motor, protección">
+  <link rel="canonical" href="https://tusitio.com/">
 
-        </section>
-    </main>
-    <footer>
-        <section>
-            <div>
-                <img src="img/reseña.jpg" alt="reseña de servicio de mantenimiento">
-            </div>
-            <div>
-                <h3>Todos nuestros clientes satisfechos</h3>
-                <p><span class="star">★</span><span class="number">4.7</span>1,000,000 de reseñas</p>
-            </div>
-        </section>
-    </footer>
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Servicio de mantenimiento de motocicletas">
+  <meta property="og:description" content="Suscríbete al mejor servicio de mantenimiento de motocicletas y protege tu vida y la de tu motor.">
+  <meta property="og:image" content="https://tusitio.com/img/Dominar-400.jpg">
+  <meta property="og:url" content="https://tusitio.com/">
+  <meta property="og:locale" content="es_MX">
+
+  <title>Diagnóstico y Mantenimiento de Motocicletas</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a class="nav__enlace" href="#" rel="noopener">
+        <img src="img/menu.png" alt="Icono del menú principal">
+      </a>
+      <button>Contacta</button>
+    </nav>
+  </header>
+
+  <main>
+    <section class="main__s1">
+      <h1>Protege tu vida y la de tu motor</h1>
+      <p>Estás a punto de suscribirte al mejor servicio de mantenimiento de motocicletas.</p>
+      <form>
+        <label for="correo">Correo electrónico:</label>
+        <input type="email" name="correo" id="correo" placeholder="Tu correo electrónico">
+        <button type="submit">Registrarme</button>
+      </form>
+    </section>
+
+    <section class="main__s2">
+      <img src="img/Dominar-400.jpg" alt="Motocicleta Bajaj Dominar 400 en mantenimiento">
+    </section>
+  </main>
+
+  <footer>
+    <section>
+      <div>
+        <img src="img/reseña.jpg" alt="Clientes satisfechos del servicio de mantenimiento de motocicletas">
+      </div>
+      <div>
+        <h3>Todos nuestros clientes satisfechos</h3>
+        <p><span class="star">★</span><span class="number">4.7</span> 1,000,000 reseñas</p>
+      </div>
+    </section>
+  </footer>
 </body>
 </html>
