Se modifica texto del label y el margen a la derecha

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h1>Protege tu vida y la de tu motor</h1>
       <p>Estás a punto de suscribirte al mejor servicio de mantenimiento de motocicletas.</p>
       <form>
-        <label for="correo">Correo electrónico:</label>
+        <label for="correo">Tu correo:</label>
         <input type="email" name="correo" id="correo" placeholder="Tu correo electrónico">
         <button type="submit">Registrarme</button>
       </form>
